Update report template

--- a/report/main.tex
+++ b/report/main.tex
@@ -5,7 +5,7 @@
 \usepackage{csquotes}
 \usepackage{graphicx}
 \usepackage{fancyhdr}
-\usepackage{hyperref}
+% \usepackage{hyperref}
 
 \usepackage[style=ieee, backend=biber]{biblatex}
 
@@ -32,8 +32,23 @@
 \newpage
 
 
-\section{Abstract}
+\section*{Abstract}
 \input{sections/abstract.tex}
+
+\section{Introduction}
+\section{Background}
+\section{Related Work}
+\section{Method}
+\subsection{The Platform}
+\subsection{The application}
+\subsection{Invoking the update}
+\subsection{The update process}
+
+\section{Results}
+\subsection{Experimental setup}
+\subsection{Evaluation}
+
+\section{Future Work}
 
 \printbibliography
 
