Add platform information to the report

--- a/report/main.tex
+++ b/report/main.tex
@@ -39,15 +39,12 @@
 \section{Background}
 \section{Related Work}
 \section{Method}
-\subsection{The Platform}
-\subsection{The application}
-\subsection{Invoking the update}
-\subsection{The update process}
+\input{sections/method.tex}
 
 \section{Results}
 \subsection{Experimental setup}
 \subsection{Evaluation}
-
+\section{Conclusion}
 \section{Future Work}
 
 \printbibliography
