--- a/report/sources.bib
+++ b/report/sources.bib
@@ -1,14 +1,23 @@
 @inproceedings{NeRTA,
-author = {Yaacoub, Ahmed El and Mottola, Luca and Voigt, Thiemo and Rummer, Philipp},
-title = {NeRTA: Enabling Dynamic Software Updates in Mobile Robotics},
-year = {2023},
-publisher = {Association for Computing Machinery},
-address = {New York, NY, USA},
-abstract = {We present NeRTA (Next Release Time Analysis), a technique to schedule dynamic software updates of the low-level control loops of mobile robots. Dynamic software updates enable software correction and evolution during system operation. In mobile robotics, they are crucial to resolve software defects without interrupting system operation or to enable on-the-fly extensions. Low-level control loops of mobile robots, however, are time sensitive and run on resourceconstrained hardware with no operating system support. To minimize the impact of the update process, NeRTA safely schedules updates during times when the computing unit would otherwise be idle. It does so by utilizing information from the existing scheduling algorithm without impacting its operation. As such, NeRTA works orthogonal to the existing scheduler, retaining the existing platform-specific optimizations and fine-tuning, and may simply operate as a plug-in component. Our experimental evaluation shows that NeRTA estimates are within 15\% of the actual idle times in more than three-quarters of the cases. We also show that the processing overhead of NeRTA is essentially negligible.},
-booktitle = {Proceedings of the 2022 International Conference on Embedded Wireless Systems and Networks},
-pages = {120–125},
-numpages = {6},
-keywords = {updates, bug-fixes, software evolution, Dynamic software updates, mobile robotics, safety- critical systems, aerial drones},
-location = {Austria},
-series = {EWSN '22}
+    author = {Yaacoub, Ahmed El and Mottola, Luca and Voigt, Thiemo and Rummer, Philipp},
+    title = {NeRTA: Enabling Dynamic Software Updates in Mobile Robotics},
+    year = {2023},
+    publisher = {Association for Computing Machinery},
+    address = {New York, NY, USA},
+    abstract = {We present NeRTA (Next Release Time Analysis), a technique to schedule dynamic software updates of the low-level control loops of mobile robots. Dynamic software updates enable software correction and evolution during system operation. In mobile robotics, they are crucial to resolve software defects without interrupting system operation or to enable on-the-fly extensions. Low-level control loops of mobile robots, however, are time sensitive and run on resourceconstrained hardware with no operating system support. To minimize the impact of the update process, NeRTA safely schedules updates during times when the computing unit would otherwise be idle. It does so by utilizing information from the existing scheduling algorithm without impacting its operation. As such, NeRTA works orthogonal to the existing scheduler, retaining the existing platform-specific optimizations and fine-tuning, and may simply operate as a plug-in component. Our experimental evaluation shows that NeRTA estimates are within 15\% of the actual idle times in more than three-quarters of the cases. We also show that the processing overhead of NeRTA is essentially negligible.},
+    booktitle = {Proceedings of the 2022 International Conference on Embedded Wireless Systems and Networks},
+    pages = {120-125},
+    numpages = {6},
+    keywords = {updates, bug-fixes, software evolution, Dynamic software updates, mobile robotics, safety- critical systems, aerial drones},
+    location = {Austria},
+    series = {EWSN '22}
+}
+
+@report{framReport,
+  author      = {Thanigai, Priya and Goh, William},
+  date        = {March 2012},
+  institution = {Texas Instruments},
+  title       = {MSP430™ FRAM Quality and Reliability},
+  type        = {Technical Report},
+  year        = {2012}
 }
