Fix error in bibliography

--- a/report/sources.bib
+++ b/report/sources.bib
@@ -15,9 +15,9 @@
 
 @report{framReport,
   author      = {Thanigai, Priya and Goh, William},
-  date        = {March 2012},
+  date        = {2012-03},
   institution = {Texas Instruments},
   title       = {MSP430™ FRAM Quality and Reliability},
-  type        = {Technical Report},
+  type        = {Application Report},
   year        = {2012}
 }
