Add some text in introduction and related work.

--- a/report/main.tex
+++ b/report/main.tex
@@ -35,8 +35,14 @@
 \input{sections/abstract.tex}
 
 \section{Introduction}
-\section{Background}
+\input{sections/introduction.tex}
+
+% \section{Background} % Maybe not needed 
+% \input{sections/background.tex}
+
 \section{Related Work}
+\input{sections/rel_work.tex}
+
 \section{Method}
 \input{sections/method.tex}
 
