--- a/report/sections/method.tex
+++ b/report/sections/method.tex
@@ -1,5 +1,5 @@
 \subsection{The Platform}
-The platform used for the experiments in this project is the Texas Instruments MSP430FR5994 microcontroller. The MSP430FR5994 features a 16-bit RISC architecture and is equipped with 256KB of FRAM, 8KB of SRAM, and 2KB of flash memory. The relatively large FRAM is particularly useful for this project since it is a nonvolatile memory which at the same time provides high speed writes. This comes as a result of FRAM being writeable in a bit-wise manner, as opposed to flash memory which requires entire pages to be erased before new data can be written, slowing down the operations \cite{framReport}.
+The platform used for the experiments in this project is the Texas Instruments MSP430FR5994 microcontroller. The MSP430FR5994 features a 16-bit RISC architecture and is equipped with 256KB of FRAM (Ferroelectric Random Access Memory), 8KB of SRAM, and 2KB of flash memory. The relatively large FRAM is particularly useful for this project since it is a non-volatile memory which at the same time provides high speed writes and low power consumption. This comes as a result of FRAM being writeable in a bit-wise manner, as opposed to Flash memory or EEPROM which requires entire pages to be erased before new data can be written, slowing down the operations \cite{framReport}.
 \subsection{The Application}
 \subsection{Invoking the update}
 \subsection{The update process}
