--- a/report/sources.bib
+++ b/report/sources.bib
@@ -1,16 +1,21 @@
-@inproceedings{NeRTA,
-    author = {Yaacoub, Ahmed El and Mottola, Luca and Voigt, Thiemo and Rummer, Philipp},
-    title = {NeRTA: Enabling Dynamic Software Updates in Mobile Robotics},
-    year = {2023},
-    publisher = {Association for Computing Machinery},
-    address = {New York, NY, USA},
-    abstract = {We present NeRTA (Next Release Time Analysis), a technique to schedule dynamic software updates of the low-level control loops of mobile robots. Dynamic software updates enable software correction and evolution during system operation. In mobile robotics, they are crucial to resolve software defects without interrupting system operation or to enable on-the-fly extensions. Low-level control loops of mobile robots, however, are time sensitive and run on resourceconstrained hardware with no operating system support. To minimize the impact of the update process, NeRTA safely schedules updates during times when the computing unit would otherwise be idle. It does so by utilizing information from the existing scheduling algorithm without impacting its operation. As such, NeRTA works orthogonal to the existing scheduler, retaining the existing platform-specific optimizations and fine-tuning, and may simply operate as a plug-in component. Our experimental evaluation shows that NeRTA estimates are within 15\% of the actual idle times in more than three-quarters of the cases. We also show that the processing overhead of NeRTA is essentially negligible.},
-    booktitle = {Proceedings of the 2022 International Conference on Embedded Wireless Systems and Networks},
-    pages = {120-125},
-    numpages = {6},
-    keywords = {updates, bug-fixes, software evolution, Dynamic software updates, mobile robotics, safety- critical systems, aerial drones},
-    location = {Austria},
-    series = {EWSN '22}
+@article{NeRTA,
+  author = {Yaacoub, Ahmed El and Mottola, Luca and Voigt, Thiemo and R\"{u}mmer, Philipp},
+  title = {Scheduling Dynamic Software Updates in Mobile Robots},
+  year = {2023},
+  issue_date = {November 2023},
+  publisher = {Association for Computing Machinery},
+  address = {New York, NY, USA},
+  volume = {22},
+  number = {6},
+  issn = {1539-9087},
+  url = {https://doi.org/10.1145/3623676},
+  doi = {10.1145/3623676},
+  abstract = {We present NeRTA (Next Release Time Analysis), a technique to enable dynamic software updates for low-level control software of mobile robots. Dynamic software updates enable software correction and evolution during system operation. In mobile robotics, they are crucial to resolve software defects without interrupting system operation or to enable on-the-fly extensions. Low-level control software for mobile robots, however, is time sensitive and runs on resource-constrained hardware with no operating system support. To minimize the impact of the update process, NeRTA safely schedules updates during times when the computing unit would otherwise be idle. It does so by utilizing information from the existing scheduling algorithm without impacting its operation. As such, NeRTA works orthogonal to the existing scheduler, retaining the existing platform-specific optimizations and fine-tuning, and may simply operate as a plug-in component. To enable larger dynamic updates, we further conceive an additional mechanism called bounded reactive control and apply mixed-criticality concepts. The former cautiously reduces the overall control frequency, whereas the latter excludes less critical tasks from NeRTA processing. Their use increases the available idle times. We combine real-world experiments on embedded hardware with simulations to evaluate NeRTA. Our experimental evaluation shows that the difference between NeRTA’s estimated idle times and the measured idle times is less than 15\% in more than three-quarters of the samples. The combined effect of bounded reactive control and mixed-criticality concepts results in a 150+\% increase in available idle times. We also show that the processing overhead of NeRTA and of the additional mechanisms is essentially negligible.},
+  journal = {ACM Trans. Embed. Comput. Syst.},
+  month = {11},
+  articleno = {99},
+  numpages = {27},
+  keywords = {Dynamic software updates, mobile robotics, safety-critical systems, aerial drones}
 }
 
 @report{framReport,
@@ -20,4 +25,42 @@
   title       = {MSP430™ FRAM Quality and Reliability},
   type        = {Application Report},
   year        = {2012}
+}
+
+@inproceedings{dynUpdateFramework,
+  author = {Wahler, Michael and Richter, Stefan and Oriol, Manuel},
+  title = {Dynamic software updates for real-time systems},
+  year = {2009},
+  isbn = {9781605587233},
+  publisher = {Association for Computing Machinery},
+  address = {New York, NY, USA},
+  url = {https://doi.org/10.1145/1656437.1656440},
+  doi = {10.1145/1656437.1656440},
+  abstract = {Seamlessly updating software in running systems has recently gained momentum. Dynamically updating the software of real-time embedded systems, however, still poses numerous challenges: such systems must meet hard deadlines, cope with limited resources, and adhere to high safety standards.This paper presents a solution for updating component-based cyclic embedded systems without violating real-time constraints. In particular, it investigates how to identify points in time at which updates can be performed and how to transfer the state of a component to a new version of the same component. We also present experimental results to validate the proposed solution.},
+  booktitle = {Proceedings of the 2nd International Workshop on Hot Topics in Software Upgrades},
+  articleno = {2},
+  numpages = {6},
+  keywords = {real-time, embedded, dynamic software update},
+  location = {Orlando, Florida},
+  series = {HotSWUp '09}
+}
+
+@misc{hackflight,
+	author = {simondlevy},
+	title = {{Hackflight}},
+	journal = {GitHub},
+	year = {2024},
+	month = {2},
+	note = {[Online; accessed 15. Feb. 2024]},
+	url = {https://github.com/simondlevy/Hackflight}
+}
+
+@inproceedings{richter2009,
+author = {Wahler, Michael and Richter, Stefan and Oriol, Manuel},
+year = {2009},
+month = {10},
+pages = {},
+title = {Dynamic Software Updates for Real-Time Systems.},
+journal = {Proceedings of the 2nd International Workshop on Hot Topics in Software Upgrades, HotSWUp '09},
+doi = {10.1145/1656437.1656440}
 }
