--- a/report/sections/introduction.tex
+++ b/report/sections/introduction.tex
@@ -1,3 +1,5 @@
 Traditionally, software updates in embedded systems have been approached with a model that involves taking the system offline for a brief period. While this approach is feasible for many applications, there exists a subset of embedded systems where downtime is not an option due to the critical nature of their operations. These systems operate in environments where interruptions can result in severe consequences, including compromised safety, financial losses, or disruptions to essential services. Examples of these systems include aerial drones and other mobile robots, automotive systems, power generation facilities and smart grids. An alternative to the traditional approach is DSU (Dynamic Software Updates), where the system is updated while it is running. This approach allows for the system to continue operating during the update process, ensuring that the system remains available and operational by eliminating overhead time in terms of boot and initialization of the software. The DSU approach does not however come without its challenges, as the update process must be performed in a manner that does not compromise the system's integrity, safety, or real-time deadlines.
 
+While the concept of dynamic software updates is not new, there have been little research on utilising DSU in embedded systems with real-time requirements. With the wide variety of microcontroller architectures and operating systems present, the challenges of implementing DSU in embedded systems are many. But this diversity also presents opportunities for developing new methods and techniques for performing dynamic updates. One such opportunity which this project aims to investigate is the use of Ferroelectric Random-access Memory (FRAM). FRAM is a non-volatile memory technology that has the potential to provide a fast and reliable method for storing and restoring the state of the system during the update process. 
+
 Previous work in the field have targeted different methods of performing the updates, such as Holmbacka et al. \cite{dynUpdateFramework} who provide a framework to perform updates by dynamically relinking FreeRTOS tasks. This approach was shown to add overhead in the magnitude of 10s of milliseconds. Furthermore, Yaacoub et al. \cite{NeRTA} present a method to schedule the dynamic updates in a manner such that real-time deadlines can be met by analysing and predicting idle processor time. They recorded a maximum idle time of just under 3ms when measuring on a low level flight controller, Hackflight \cite{hackflight}. This shows that some use cases may present overhead restrictions far lower than those measured by Holmbacka et al. and the necessity to investigate other methods for performing the update. This thesis project aims to investigate methods for dynamic software updates, targeting these tighter real-time deadlines.  
