--- a/report/sections/method.tex
+++ b/report/sections/method.tex
@@ -1,5 +1,8 @@
 \subsection{The Platform}
-The platform used for the experiments in this project is the Texas Instruments MSP430FR5994 microcontroller. The MSP430FR5994 features a 16-bit RISC architecture and is equipped with 256KB of FRAM (Ferroelectric Random Access Memory), 8KB of SRAM, and 2KB of flash memory. The relatively large FRAM is particularly useful for this project since it is a non-volatile memory which at the same time provides high speed writes and low power consumption. This comes as a result of FRAM being writeable in a bit-wise manner, as opposed to Flash memory or EEPROM which requires entire pages to be erased before new data can be written, slowing down the operations \cite{framReport}.
-\subsection{The Application}
-\subsection{Invoking the update}
+The platform used for the experiments in this project is the Texas Instruments MSP430FR5994 microcontroller. The MSP430FR5994 features a 16-bit RISC architecture and is equipped with 256KB of FRAM (Ferroelectric Random Access Memory), 8KB of SRAM, and 2KB of flash memory. The relatively large FRAM is particularly useful for this project since it is a non-volatile memory which at the same time provides high speed writes and low power consumption. This comes as a result of FRAM being writeable in a bit-wise manner, as opposed to Flash memory or EEPROM which requires entire pages to be erased before new data can be written, slowing down the operations \cite{framReport}. A side-effect of FRAM being non-volatile is that the binary image of the program is stored in the same place that it is executed from, and can be done in-place with little overhead. 
+
+\subsection{The update process}
+The update process is initiated by sending a command to the microcontroller over a serial connection. The command is received by the microcontroller and triggers the update process. The update process is divided into three main steps: the preparation, the update, and the finalization. The preparation step is responsible for setting up the environment for the update process, such as disabling interrupts and setting up the FRAM for the update. The update step is responsible for writing the new binary image to the FRAM. The finalization step is responsible for cleaning up the environment and transferring control back to the main thread.
+A preallocated region of memory was used to store the contents of a diff file, representing the steps needed to apply the update. The diff file is read from the serial connection and written to the FRAM. The update process is then applied by reading the diff file and applying the changes to the FRAM. The update process is then finalized by transferring control back to the main thread. 
+
 \subsection{The update process}
