--- a/report/sources.bib
+++ b/report/sources.bib
@@ -47,7 +47,7 @@
 
 @misc{hackflight,
 	author = {simondlevy},
-	title = {{Hackflight}},
+	title = {Hackflight},
 	journal = {GitHub},
 	year = {2024},
 	month = {2},
@@ -63,4 +63,13 @@
   title = {Dynamic Software Updates for Real-Time Systems.},
   journal = {Proceedings of the 2nd International Workshop on Hot Topics in Software Upgrades, HotSWUp '09},
   doi = {10.1145/1656437.1656440}
+}
+
+@article{dsuChallenges, 
+  title={Challenges in Dynamic Software Updating}, 
+  doi={10.18421/tem91-17}, 
+  abstractNote={Changes in the domain or simple bug corrections lead to software updating. In general, software updating involves halting the running program, which is not desirable in the current applications, for reasons such as costs in business or undesired situations in mission-critical applications. To avoid program halting and to replace the current program version while running, many different Dynamic Software Updating (DSU) solutions have been developed. This paper presents a set of challenges in the existing research of dynamic software updating and the ideas for further developments.}, 
+  publisher={TEM Journal}, 
+  author={Mlinarić, Danijel}, 
+  year={2020}
 }
