--- a/report/main.tex
+++ b/report/main.tex
@@ -74,8 +74,8 @@
 \section{Related Work}
 \input{sections/rel_work.tex}
 
-\section{Problem and Requirements} 
-\input{sections/requirements.tex}
+\section{Background}
+\input{sections/background.tex}
 
 \section{Method}
 \input{sections/method.tex}
