--- a/report/main.tex
+++ b/report/main.tex
@@ -81,8 +81,8 @@
 \input{sections/method.tex}
 
 \section{Results}
-\subsection{Experimental setup}
-\subsection{Evaluation}
+\input{sections/experiments.tex}
+
 \section{Conclusion}
 \section{Future Work}
 
