--- a/report/sections/background.tex
+++ b/report/sections/background.tex
@@ -5,6 +5,7 @@ The platform used for the experiments in this project is the Texas Instruments M
 
 One drawback of FRAM is that accesses to it are limited to 8MHz. Thus, if the microcontroller is running at 16MHz, the CPU will be stalled for every access to FRAM. This is a limitation that must be considered when measuring the performance of the update process.
 \todo{Why is this interesting for DSU?}
+\todo{Describe memory layout and "catches"}
 
 
 \subsubsection*{Problem statement}
