Final draft background

--- a/report/sources.bib
+++ b/report/sources.bib
@@ -18,6 +18,16 @@
   keywords = {Dynamic software updates, mobile robotics, safety-critical systems, aerial drones}
 }
 
+@manual{fr5994DataSheet,
+  organization  = {Texas Instruments},
+  date          = {Revised January 2021},
+  title         = {MSP430FR599x, MSP430FR596x Mixed-Signal Microcontrollers},
+  type          = {Datasheet},
+  year          = {2016},
+  month         = {3},
+  number        = {SLASE54D},
+}
+
 @report{framReport,
   author      = {Thanigai, Priya and Goh, William},
   date        = {2012-03},
