--- a/report/sections/rel_work.tex
+++ b/report/sections/rel_work.tex
@@ -1,3 +1,9 @@
+As previously mentioned, DSU in embedded and real time systems is relatively under-represented in the literature. However, there are some studies which have investigated the topic, and some of these are discussed in this section.
 
-One study by Richter and Oriol \cite{richter2009} introduce a framework for developing DSU-friendly systems in embedded devices. Their framework is based on dividing the system into components which can be swapped out independently of one another, providing a high degree of flexibility when it comes to DSU. They also show that their framework can meet real-time deadlines as small as 3.3ms including a state transfer of a  4000 byte state.  This approach is promising for projects in early stages, since it requires dividing the system into components and integrating the framework. For systems already in production, it would require a significant amount of refactoring to implement, which can be costly and prone to introduce errors.
-\todo{Add more here}
+One study by Richter and Oriol \cite{richter2009} introduce a framework for developing DSU-friendly systems in embedded devices. Their framework is based on dividing the system into components which can be swapped out independently of one another, providing a high degree of flexibility when it comes to DSU. They also show that their framework can meet real-time deadlines as small as 3.3ms including a state transfer of a  4000 byte state.  Their approach is promising, but the processor used in the experiments is a 32-bit MPC5200 running at 396MHz, which is significantly more powerful than the MSP430FR5994 used in this research. Thus, it is not clear how the results would translate to a less powerful system with more stringent real-time requirements.
+
+Another study by Kilpeläinen \cite{Kilpelainen2023} present a thorough theoretical analysis of DSU in embedded systems. They propose a method for performing DSU in systems with Flash memory, which is a common storage medium in embedded systems. Their method involves copying the page to be updated into a buffer in RAM, where the changes are applied, and then erasing and rewriting the page. The proposed solution has some similarities to the solution presented in this research, in that it utilises binary differencing (\textit{diffing}). Diffing may prove a more suitable solution for embedded systems as it is less memory intensive than component based solutions, which require multiple copies of the application to be stored in memory, at least temporarily. However, the approach presented by Kilpelainen2023 is not ideal for systems with real-time requirements, as it introduces significant time costs for the update process. The method is also not tested in a practical setting, so it is not clear how the solution would perform. 
+
+The solution presented in this research is based on the idea of generating a patch file which describes the changes to be made to the binary image. Multiple studies which focus on the generation of a patch file for DSU have been conducted. One such example is \cite{dsuEnhancer}, where the authors Kim et al. present a system which generates a patch file for resource constrained systems. They propose a solution similar to this research, where the patch file generator is run off the target device, and is then applied after transfer. Their approach is to insert branch instructions into the old versions of functions, which jump to the new implementation. This approach is beneficial when it comes to reducing the runtime overhead of the update, but it is not clear how this affects memory utilisation. Since the old version of the binary is left on the device, it is possible that the memory overhead of the update is higher than in a system where the old version is removed. In addition, the system utilises dynamic memory allocation to store and apply the patch file, which is not ideal for a real-time embedded system, as it is inherently less predictable than static memory allocation. The system is also not tested on a real-time system, so it is not clear how the system would perform in a real-time environment.
+
+A similar approach for patch file generation is presented by Felser et al. in \cite{resourceConstrained}. They analyse ELF files to find the differences between versions of the application and generate a patch file which describes the changes between the two versions. The patch file is generated off the target device, and they use a manager to schedule and distribute it across a network of embedded nodes. This approach is more granular than Kim et al. in \cite{dsuEnhancer}, and could prove more suitable as a complement to this research. The research again focuses on the patch file generation and application, but does not discuss the real-time requirements of the system. It is nevertheless an approach that could be used for automatic patch file generation in a system similar to this research.
