--- a/report/sources.bib
+++ b/report/sources.bib
@@ -55,6 +55,44 @@
   series = {HotSWUp '09}
 }
 
+@InProceedings{resourceConstrained,
+author="Felser, Meik
+and Kapitza, R{\"u}diger
+and Klein{\"o}der, J{\"u}rgen
+and Schr{\"o}der-Preikschat, Wolfgang",
+editor="Rettberg, Achim
+and Zanella, Mauro C.
+and D{\"o}mer, Rainer
+and Gerstlauer, Andreas
+and Rammig, Franz J.",
+title="Dynamic Software Update of Resource-Constrained Distributed Embedded Systems",
+booktitle="Embedded System Design: Topics, Techniques and Trends",
+year="2007",
+publisher="Springer US",
+address="Boston, MA",
+pages="387--400",
+isbn="978-0-387-72258-0"
+}
+
+@InProceedings{dsuEnhancer,
+author="Kim, Dong Kwan
+and Kim, Won-Tae
+and Park, Seung-Min",
+editor="Kim, Tai-hoon
+and Adeli, Hojjat
+and Stoica, Adrian
+and Kang, Byeong-Ho",
+title="DSUENHANCER: A Dynamic Update System for Resource-Constrained Software",
+booktitle="Control and Automation, and Energy System Engineering",
+year="2011",
+publisher="Springer Berlin Heidelberg",
+address="Berlin, Heidelberg",
+pages="195--201",
+abstract="Dynamic Software Update (DSU) is an advanced software practice to change a running program with imposing negligible service interruption while updating. In this paper, we present DSUEnhancer, a DSU implementation for resource-constrained C programs like embedded software. DSUEnhancer generates a patch file off-line and loads it into the dynamic memory of an updated program on-line. In particular, DSUEnhancer is relatively lightweight in terms of memory and CPU usage and runs on the ARM architecture with the gcc cross compiler.",
+isbn="978-3-642-26010-0"
+}
+
+
 @misc{hackflight,
 	author = {simondlevy},
 	title = {Hackflight},
@@ -82,4 +120,21 @@
   publisher={TEM Journal}, 
   author={Mlinarić, Danijel}, 
   year={2020}
+}
+
+@thesis{Kilpelainen2023,
+	author = {Kilpeläinen, Heikki},
+  institution = {Metroplia University of Applied Sciences},
+	title = {{Dynamic firmware updating of an embedded system}},
+	year = {2023},
+  month = {2},
+	url = {https://urn.fi/URN:NBN:fi:amk-202303173785},
+}
+
+@article{BSDiff,
+  author            = {Percival, Colin},
+  date              = {2003},
+  title             = {Naive differences of executable code},
+  year              = {2003},
+  url               = {https://www.daemonology.net/bsdiff/},
 }
